# AsyncDownload

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
cmake/: CompilerOptions.cmake
configs/: download_options.template.json
docs/: architecture_zh.md  flowcharts_zh.md  project_requirement_document.md  reimplementation_test_spec_zh.md
docs/archive/: handover_2026-03-09.md
docs/performance/: optimization_regression_guide_zh.md  performance_baseline_20260310_regression_zh.md  performance_baseline_20260311_regression_v2_zh.md  performance_optimization_history_zh.md  performance_playbook_zh.md  performance_thread_initialization_zh.md  profiler_behavior_baseline_20260311_zh.md  queue_backpressure_instrumentation_plan_zh.md  transfer_handle_packet_aggregation_plan_zh.md
include/asyncdownload/: client.hpp  error.hpp  performance_metrics.hpp  types.hpp
scripts/: benchmark.py
scripts/performance/: benchmark.py  performance_common.py  profiler.py
skills/asyncdownload-performance/: SKILL.md
skills/asyncdownload-performance/agents/: openai.yaml
skills/history-archive/: SKILL.md
skills/history-archive/agents/: openai.yaml
skills/history-archive/scripts/: upsert_history.py
src/: CMakeLists.txt  client.cpp  main.cpp
src/core/: alignment.hpp  block_bitmap.cpp  block_bitmap.hpp  constants.hpp  crc32.cpp  crc32.hpp  error.cpp  memory_accounting.cpp  memory_accounting.hpp  models.hpp  path_utils.cpp  path_utils.hpp
src/download/: download_engine.cpp  download_engine.hpp  http_probe.cpp  http_probe.hpp  range_scheduler.cpp  range_scheduler.hpp
src/metadata/: metadata_store.cpp  metadata_store.hpp
src/persistence/: persistence_thread.cpp  persistence_thread.hpp
src/storage/: file_writer.cpp  file_writer.hpp
tests/: CMakeLists.txt  main_test.cpp
tests/core/: block_bitmap_real_partition_test.cpp  block_bitmap_test.cpp  memory_accounting_test.cpp
tests/download/: download_resume_integration_test.cpp  range_scheduler_test.cpp
tests/persistence/: persistence_thread_test.cpp
tests/storage/: file_writer_test.cpp  metadata_store_test.cpp
tests/support/: range_server.py
